--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 :root {
-    --lightblue: #f7f8fc;
-    --darkgrey: #363740;
+    --darkgrey: #9fa2b4;
+    --lightgrey: #dfe0eb;
+    --bg-black: #363740;
+    --bg-white: #f7f8fc;
 }
 
 * {
@@ -12,35 +14,223 @@
 body {
     background-color: var(--lightblue);
     display: grid;
-    grid-template-columns: 15vw 1fr;
+    grid-template-columns: clamp(225px, 25%, 275px) 1fr;
     font-family: 'Mulish', sans-serif;
+    min-height: 100vh;
+    height: 100%;
 }
 
 main {
-    height: 100vh;
+    display: grid;
+    grid-template-rows: auto auto 1fr auto;
+}
+
+a {
+    text-decoration: none;
 }
 
 /* Sidebar and its items */
 .sidebar {
-    background-color: ;
+    background-color: var(--bg-black);
     grid-column: 1 / 2;
     grid-row: 1 / -1;
-    padding: 1.5rem;
+    position: relative;
+    top: 0;
+    height: 100%;
+    padding: 1.5rem 0.8rem;
 }
 
 .logo-container {
-    margin-bottom: 10px;
+    padding: 1.2rem;
+    position: fixed;
 }
 
 .sidebar-nav {
     display: flex;
     flex-direction: column;
+    height: 80%;
+    justify-content: space-between;
+    color: var(--darkgrey);
+    position: fixed;
+    top: 7.5rem;
 }
 
 .sidebar-nav li {
     list-style: none;
     display: flex;
     align-items: center;
-    padding: 0.8rem;
-    gap: 0.8rem;
+    padding: 0.8rem 1.5rem;
+    gap: 2rem;
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 25px;
+}
+
+.header-left {
+    font-size: 0.8rem;
+}
+
+.header-right {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    color: var(--darkgrey);
+}
+
+.icons {
+    border-right: 2px solid var(--lightgrey);
+    padding: 0 15px;
+}
+
+.user-img img {
+    padding: 1px;
+    outline: 2px solid var(--darkgrey);
+    border-radius: 50%;
+}
+
+.ticket-cards {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    margin: 25px;
+    gap: 25px;
+}
+
+.card {
+    border: 2px solid var(--lightgrey);
+    border-radius: 8px;
+    text-align: center;
+    padding: 1.2em;
+}
+
+.card p {
+    font-size: 1.0rem;
+    font-weight: 600;
+    color: var(--darkgrey);
+    padding: 5px 0;
+}
+
+.card p:last-child {
+    color: var(--text-main);
+    font-size: 2.2rem;
+    font-weight: 700;
+}
+
+.graph-container {
+    border: 2px solid var(--lightgrey);
+    border-radius: 8px;
+    border-bottom-left-radius: 0px;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    margin: 0 25px;
+}
+
+.graph {
+    position: relative;
+}
+
+.graph img {
+    width: 100%;
+    height: 100%;
+}
+
+.graph-title {
+    position: absolute;
+    padding: 1.5em 0 0 1.5em;
+}
+
+.stats-container {
+    border-left: 2px solid var(--lightgrey);
+    display: grid;
+    grid-template-rows: repeat(4, 1fr);
+    text-align: center;
+}
+
+.stats-item {
+    border-bottom: 2px solid var(--lightgrey);
+    padding: 8%;
+    color: var(--darkgrey);
+}
+
+.stats-item:last-child {
+    border-bottom: none;
+}
+
+.stats-item p:last-child {
+    padding-top: 0.5rem;
+    font-weight: 600;
+    font-size: 1.2rem;
+    color: #000;
+}
+
+.data-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin: 25px;
+    gap: 25px;
+}
+
+.data-item {
+    border: 2px solid var(--lightgrey);
+    border-radius: 8px;
+}
+
+.item-header p {
+    padding: 8px 25px;
+}
+
+.item-title {
+    display: flex;
+    padding: 25px 25px 0 25px;
+    justify-content: space-between;
+}
+
+.item-info {
+    display: flex;
+    padding: 20px 25px;
+    font-size: 0.9em;
+    justify-content: space-between;
+    border-bottom: 2px solid var(--lightgrey);
+}
+
+.item-info:last-child {
+    border-bottom: none;
+}
+
+.grey {
+    color: var(--darkgrey);
+}
+
+.dark {
+    color: var(--bg-black);
+}
+
+.status {
+    border-radius: 6px;
+    width: 75px;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 0.8em;
+    font-weight: 600;
+    padding: 4px 8px;
+    color: var(--lightgrey);
+}
+
+.urgent {
+    background-color: #f00808;
+}
+
+.new {
+    background-color: #29cc97;
+}
+
+.default {
+    background-color: var(--bg-black);
+}
+
+.assigned {
+    background-color: #3751ff;
 }
